# ROSPerch

./: LICENSE  README.md
rosperch/: CMakeLists.txt  change-gpio-perms.sh  complicated.launch  package.xml  thisisatest.txt
rosperch/include/rosperch/: include.txt
rosperch/launch/: complicated.launch  launch.txt
rosperch/msg/: .Commands.msg.swp  Accel.msg  Commands.msg  Gyro.msg  Magno.msg  Orientation.msg  msg.txt
rosperch/scripts/: 9dof_pub.py  joy_controller.py  mission_launcher.py  mission_launcher.py.save  scripts.txt  simple_controller.py
rosperch/scripts/auto_code/: auto_square.py  launcher_for_auto_square.py
rosperch/scripts/auto_code/auto_square/: auto_square.py  launcher_for_auto_square.py
rosperch/scripts/auto_code/command_based/: auto_driver.py  mission_commands.py
rosperch/scripts/navigation-wip/maps/: rectangle_map.yaml
rosperch/scripts/simple_motor_test/: controller.py  motor_code.py  receiver.py
rosperch/scripts/wip/: .auto_test.py.swp  9dof_pub.py  Kalman_Filter.py  Mag_Offsets.py  Noise_Measurement.py  Var_Measurement.py  auto_driver.py  auto_driver2.py  auto_test.py  mission_commands.py  mission_commands2.py  mission_launcher.py  test_mission_launcher.py
rosperch/src/: src.txt
